--- a/URL-shortner/views/logIn.ejs
+++ b/URL-shortner/views/logIn.ejs
@@ -75,7 +75,7 @@
               <input type="password" id="passwordConfirmation" name="passwordConfirmation" required>
             </div> -->
         
-            <button type="submit">Sign Up</button>
+            <button type="submit">Log In</button>
     </div>
 </body>
 </html>
