--- a/blog-node-app/views/home.ejs
+++ b/blog-node-app/views/home.ejs
@@ -7,6 +7,8 @@
 <body>
     <%- include('./partials/nav.ejs') %>
 
+    <%= JSON.stringify(user) %>
+
     <%- include('./partials/script.ejs') %>
 </body>
 </html>
