--- a/blog-node-app/views/signup.ejs
+++ b/blog-node-app/views/signup.ejs
@@ -6,22 +6,24 @@
 </head>
 <body>
     <%- include('./partials/nav.ejs') %>
-    <form action="/user/signup" method="post">
-        <div class="mb-3 mt-4">
-            <label for="exampleInputEmail1" class="form-label">Full Name</label>
-            <input type="text" name="fullname" class="form-control" id="fullname" aria-describedby="emailHelp">
+    <div class="d-flex align-items-center justify-content-center">
+      <form action="/user/signup" method="post">
+          <div class="mb-3 mt-4">
+              <label for="exampleInputEmail1" class="form-label">Full Name</label>
+              <input type="text" name="fullname" class="form-control col-md-6" id="fullname" aria-describedby="emailHelp">
+            </div>
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Email address</label>
+            <input type="email" name="email" class="form-control col-md-6" id="email" aria-describedby="emailHelp">
+            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
           </div>
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp">
-          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input type="password" name="password" class="form-control" id="password">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
+          <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label">Password</label>
+            <input type="password" name="password" class="form-control col-md-6" id="password">
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
     <%- include('./partials/script.ejs') %>
 </body>
 </html>
