--- a/blog-node-app/views/signin.ejs
+++ b/blog-node-app/views/signin.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <%- include('./partials/head.ejs') %>
-    <title><%= title %></title>
+    <title>Blog | <%= title %></title>
 </head>
 <body>
     <%- include('./partials/nav.ejs') %>
