--- a/book-store-API/views/index.ejs
+++ b/book-store-API/views/index.ejs
@@ -1,1 +1,7 @@
-middle
+<h2>Recently Added</h2>
+<div>
+    <% books.forEach(book => { %>
+      <img height="150" width="130" src="<%= book.coverImagePath %>">
+      <p><%= book.title %></p>
+    <% }) %>
+</div>
