--- a/book-store-API/views/books/_form-fields.ejs
+++ b/book-store-API/views/books/_form-fields.ejs
@@ -24,8 +24,8 @@
     <input type="number" name="pageCount" min="1" value="<%= book.pageCount %>">
 </div>
 <div>
-    <label>Cover</label>
-    <input type="file" name="cover">
+    <label>Cover Image</label>
+    <input type="file" name="cover" class="filepond">
 </div>
 <div>
     <label>Description</label>
