--- a/book-store-API/views/books/index.ejs
+++ b/book-store-API/views/books/index.ejs
@@ -17,5 +17,6 @@
 <div>
   <% books.forEach(book => { %>
     <img height="150" width="130" src="<%= book.coverImagePath %>">
+    <p><%= book.title %></p>
   <% }) %>
 </div>
