--- a/book-store-API/views/books/new.ejs
+++ b/book-store-API/views/books/new.ejs
@@ -1,5 +1,5 @@
 <h2>New book</h2> 
-<form method="post" action="/books" enctype="multipart/form-data">
+<form method="post" action="/books">
     <%- include('_form-fields') %>
     
     <a href="/books" class="btn btn-secondary">Cancel</a>
