--- a/book-store-API/views/books/index.ejs
+++ b/book-store-API/views/books/index.ejs
@@ -16,7 +16,9 @@
 </form>
 <div>
   <% books.forEach(book => { %>
-    <img height="150" width="130" src="<%= book.coverImagePath %>">
-    <p><%= book.title %></p>
+    <a href="/books/<%= book.id %>">
+      <img height="150" width="130" src="<%= book.coverImagePath %>">
+      <p><%= book.title %></p>
+    </a>
   <% }) %>
 </div>
