stylesheet: general css, btn, header, variables

--- a/book-store-API/views/books/new.ejs
+++ b/book-store-API/views/books/new.ejs
@@ -1,7 +1,7 @@
-<h2>New book</h2> 
+<h2 class="page-header">New book</h2> 
 <form method="post" action="/books">
     <%- include('_form-fields') %>
     
-    <a href="/books" class="btn btn-secondary">Cancel</a>
+    <a href="/books" class="btn btn-primary">Cancel</a>
     <button type="submit" class="btn btn-primary">Create</button>
   </form>
