--- a/book-store-API/views/authors/index.ejs
+++ b/book-store-API/views/authors/index.ejs
@@ -1,4 +1,4 @@
-<h2>All Authors</h2>
+<h2 class="page-header">All Authors</h2>
 <form action="/authors" method="get">
     <label for="search">Search: </label>
     <input type="text" name="name" value="<%= searchOptions.name %>">
@@ -6,8 +6,10 @@
 </form>
 <br>
 <% authors.forEach(author => { %>
-    <div><%= author.name %></div>
-    <a href="/authors/<%= author.id %>">View</a>
-    <a href="/authors/<%= author.id %>/edit">Edit</a>
-    <%- include('../partials/deleteForm', { url: `/authors/${author.id}` }) %>
+    <div class="btn-row">
+        <div><%= author.name %></div>
+        <a href="/authors/<%= author.id %>" class="btn btn-primary">View</a>
+        <a href="/authors/<%= author.id %>/edit" class="btn btn-primary">Edit</a>
+        <%- include('../partials/deleteForm', { url: `/authors/${author.id}` }) %>
+    </div>
 <% }) %>
