--- a/book-store-API/views/authors/new.ejs
+++ b/book-store-API/views/authors/new.ejs
@@ -1,7 +1,7 @@
-<h2>New author</h2> 
+<h2 class="page-header">New author</h2> 
 <form method="post" action="/authors">
     <%- include('_form-fields') %>
     
-    <a href="/authors" class="btn btn-secondary">Cancel</a>
+    <a href="/authors" class="btn btn-danger1">Cancel</a>
     <button type="submit" class="btn btn-primary">Create</button>
   </form>
