--- a/book-store-API/views/books/edit.ejs
+++ b/book-store-API/views/books/edit.ejs
@@ -1,4 +1,4 @@
-<h2>Edit Book</h2> 
+<h2 class="page-header">Edit Book</h2> 
 <form method="post" action="/books/<%= book.id %>?_method=PUT">
     <%- include('_form-fields') %>
     
