--- a/book-store-API/views/authors/_form-fields.ejs
+++ b/book-store-API/views/authors/_form-fields.ejs
@@ -1,4 +1,6 @@
- <div class="form-group">
-      <label for="name">Name:</label>
-      <input type="text" class="form-control" id="name" name="name" required value="<%= author.name %>">
+ <div class="form-row">
+      <div class="form-item">
+            <label for="name">Name:</label>
+            <input type="text" class="form-control" id="name" name="name" required value="<%= author.name %>">
+      </div>
 </div> 
