--- a/book-store-API/views/authors/show.ejs
+++ b/book-store-API/views/authors/show.ejs
@@ -1,12 +1,9 @@
 <h2 class="page-header"><%= author.name %></h2>
-<a href="/authors/<%= author.id %>/edit">Edit</a>
-<%- include('../partials/deleteForm', { url: `/authors/${author.id}` }) %>
+<div class="btn-row">
+    <a href="/authors/<%= author.id %>/edit" class="btn btn-primary">Edit</a>
+    <%- include('../partials/deleteForm', { url: `/authors/${author.id}` }) %>
+</div>
 <% if (booksByAuthor.length > 0) { %>
-    <h3>Books by Author</h3>
-    <% booksByAuthor.forEach(book => { %>
-        <a href="/books/<%= book.id %>">
-            <img height="150" width="130" src="<%= book.coverImagePath %>">
-            <p><%= book.title %></p>
-        </a>
-    <% }) %>
+    <h3 class="page-header">Books by Author</h3>
+    <%- include('../partials/bookGrid', { books: booksByAuthor }) %>
 <% } %>
