--- a/book-store-API/views/books/_form-fields.ejs
+++ b/book-store-API/views/books/_form-fields.ejs
@@ -1,8 +1,12 @@
-<div>
+<div class="form-row">
+  <div class="form-item">
     <label>Title</label>
     <input type="text" name="title" value="<%= book.title %>">
+  </div>
 </div>
-<div>
+
+<div class="form-row">
+  <div class="form-item">
     <label>Author</label>
     <select name="author">
     <% authors.forEach(author => { %>
@@ -13,21 +17,28 @@
       <% } %>
     <% }) %>
     </select>
+  </div>
 </div>
-<div>
+
+<div class="form-row">
+  <div class="form-item">
     <label>Publish Date</label>
     <input type="date" name="publishDate"
           value="<%= book.publishDate == null ? '' : book.publishDate.toISOString().split('T')[0] %>">
+  </div>
+  <div class="form-item">
+      <label>Page Count</label>
+      <input type="number" name="pageCount" min="1" value="<%= book.pageCount %>">
+  </div>
 </div>
-<div>
-    <label>Page Count</label>
-    <input type="number" name="pageCount" min="1" value="<%= book.pageCount %>">
-</div>
-<div>
+
+<div class="form-row">
+  <div class="form-item form-item-no-grow">
     <label>Cover Image</label>
-    <input type="file" name="cover" class="filepond">
-</div>
-<div>
-    <label>Description</label>
-    <textarea name="description"><%= book.description %></textarea>
+    <input type="file" name="cover" class="book-cover filepond">
+  </div>
+  <div class="form-item">
+      <label>Description</label>
+      <textarea name="description"><%= book.description %></textarea>
+  </div>
 </div>
