--- a/book-store-API/views/books/edit.ejs
+++ b/book-store-API/views/books/edit.ejs
@@ -1,7 +1,8 @@
 <h2 class="page-header">Edit Book</h2> 
 <form method="post" action="/books/<%= book.id %>?_method=PUT">
     <%- include('_form-fields') %>
-    
-    <a href="/books" class="btn btn-secondary">Cancel</a>
-    <button type="submit" class="btn btn-primary">Update</button>
+    <div class="form-row form-row-end btn-row">
+      <a href="/books" class="btn btn-danfger1">Cancel</a>
+      <button type="submit" class="btn btn-primary">Update</button>
+    </div>
   </form>
