bookController, final styling: index page

--- a/book-store-API/views/index.ejs
+++ b/book-store-API/views/index.ejs
@@ -1,5 +1,5 @@
 <h2 class="page-header">Recently Added</h2>
-<div>
+<div class="recent-flex">
     <% books.forEach(book => { %>
       <a href="/books/<%= book.id %>">
         <img height="150" width="130" src="<%= book.coverImagePath %>">
