--- a/book-store-API/public/stylesheet/main.css
+++ b/book-store-API/public/stylesheet/main.css
@@ -34,3 +34,19 @@ body {
   font-size: 1.8rem;
   font-weight: 500;
 }
+
+.recent-flex{
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+.recent-flex a{
+  text-decoration: none;
+  color: var(--color-text-light);
+}
+.recent-flex a:hover{
+  text-decoration:underline;
+  color: whitesmoke;
+}
