--- a/book-store-API/views/partials/header.ejs
+++ b/book-store-API/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header>
     <nav class="header-nav">
-      <a href="/" class="header-title">Library</a>
+      <a href="/" class="header-title">CSLibrary</a>
       <ul>
         <li><a href="/books">Books</a></li>
         <li><a href="/books/new">Add Book</a></li>
